# deploydodo

./: .gitignore  Cargo.toml  Makefile.toml
backend/: .gitignore  Cargo.toml
backend/migrations/: 0001_create_users_table.up.sql  0002_create_auth_sessions_table.down.sql  0002_create_auth_sessions_table.up.sql  0003_create_variables_table.down.sql  0003_create_variables_table.up.sql  0004_create_servers_and_ssh_keys_table.down.sql  0004_create_servers_and_ssh_keys_table.up.sql  0005_create_jobs_and_events_table.down.sql  0005_create_jobs_and_events_table.up.sql
backend/src/: db.rs  dependencies.rs  error.rs  main.rs  openapi.rs
backend/src/routes/: create_admin.rs  create_local_server.rs  create_remote_server.rs  create_server.rs  health.rs  job_events.rs  list_servers.rs  login.rs  mod.rs  status.rs  validate_session.rs
backend/src/services/: job_service.rs  mod.rs  server_service.rs  session_service.rs  ssh_service.rs  user_service.rs  variables_service.rs
dodosh/: Cargo.toml
dodosh/src/: client.rs  lib.rs
frontend/: .gitignore  index.html  package-lock.json  package.json  tsconfig.app.json  vite.config.ts
frontend/src/: index.css  main.tsx  routeConfig.ts  router.tsx
frontend/src/api/: client.ts  mutations.ts  queries.ts  types.ts
frontend/src/assets/icons/: index.ts
frontend/src/components/: Animated.tsx  Button.tsx  Logo.tsx  TextInput.tsx  Toast.tsx
frontend/src/hooks/: useConstructor.ts  useJobEvents.ts
frontend/src/layouts/: DashboardLayout.tsx
frontend/src/pages/Dashboard/: Dashboard.tsx  DashboardIndex.tsx  DashboardLayout.tsx  (+8 more)
(+40 files in other folders)
