[package]
name = "backend"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.8"
tokio = { workspace = true }
tower-http = { version = "0.6", features = ["cors", "fs", "compression-gzip"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
sqlx = { version = "0.8", features = [
    "runtime-tokio",
    "sqlite",
    "migrate",
    "chrono",
] }
argon2 = { version = "0.5", features = ["password-hash"] }
rand_core = { version = "0.6", features = ["getrandom"] }
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
thiserror = { workspace = true }
utoipa = { version = "5", features = ["axum_extras"] }
async-stream = "0.3"
futures-core = "0.3"
dodosh = { path = "../dodosh" }
